--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/home.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mo9ses' Portfolio</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
