--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <title>Mo9ses' Portfolio</title>
   </head>
   <body>
+    <h1>Bruh</h1>
     <canvas id="bg"></canvas>
+    <h1>Bruh</h1>
     <script type="module" src="src/main.ts"></script>
   </body>
 </html>
