--- a/public/main/index.html
+++ b/public/main/index.html
@@ -19,7 +19,7 @@
       <section>
         <h2>📜 Manifesto 📜</h2>
         <p>
-          Hello! My name is Bryan Athanas A.k.a Mo9ses. I am a highschool freshmen frontend and backend TypeScript developer. I spend my hours watching anime, working on projects, and playing games
+          Hello! My name is Bryan Athanas. I am in highschool. I spend my hours watching anime, working on projects, and playing games
         </p>
         <h3>😂 Anime 😂</h3>
         <p>
@@ -27,11 +27,11 @@
         </p>
         <h3>💻 Projects 💻</h3>
         <p>
-          I have worked on many projects in my 15 years of life like ROT, my Portfolio, my anime website (currently not available), and many more.
+          I have worked on many projects in my 16 years of life like ROT, my Portfolio, my live chat app, my anime streaming website, and many more.
         </p>
         <h3>🏀 Gaming 🕹️</h3>
         <p>
-          I like to play video games like Minecraft, GTA, and Apex Legends. I also play sports in real life like Basketball and Football.
+          I like to play video games like Minecraft, GTA. I also play sports in real life like Basketball and Football.
         </p>
       </section>
       <section class="light">
@@ -41,11 +41,15 @@
         </p>
         <h2>🏆 Accomplishments 🏆</h2>
         <p>
-          I would say my biggest accomplishments that come to mind are learning JavaScript and TypeScript, building my PC, and building a database.
+          I would say my biggest accomplishments that come to mind are learning JavaScript and TypeScript, building a PC, and building a database.
         </p>
       </section>
       <section class="left">
         <h2>💀 Main Projects 💀</h2>
+        <h3>Animosity Live</h3>
+        <p>
+          Animosity Live is my live communications application/website that I made to talk to my friends. Click here to vist the <a href="https://animosity.live" target="_blank" id="discord">Website</a>.
+        </p>
         <h3>ROT</h3>
         <p>
           ROT is one of the best Minecraft Bedrock server essential addons. Currently. it has 30 commands with features like a Auction House, Factions, a Leaderboard system, and many more. Join the <a href="https://discord.gg/2ADBWfcC6S" target="_blank" id="discord">ROT Discord</a> and take a look at our <a href="https://github.com/ROT-Utilities/ROT/" target="_blank" id="github">GitHub Organization</a>.
@@ -53,10 +57,6 @@
         <h3>HaveN SkyGen</h3>
         <p>
           If you're looking for a Minecraft SkyGen, join HaveN Skygen. Join because yes. Join the <a href="https://discord.gg/playhaven" target="_blank" id="discord">HaveN Discord</a> and take a look at the <a href="https://github.com/HaveN-Organizer" target="_blank" id="github">GitHub Organization</a> if you wish.
-        </p>
-        <h3>Calamity</h3>
-        <p>
-          Calamity is going to be the biggest open world RPG games in Mimecraft Bedrock edition. With many months of development and the resources to back it up, it's bound to be the top server.Join the <a href="https://discord.gg/playhaven" target="_blank" id="discord">Calamity Discord</a>.
         </p>
       </section>
       <blockquote>
